bugfix: spacing

--- a/src/assets/styles/message.css
+++ b/src/assets/styles/message.css
@@ -10,7 +10,7 @@
 }
 .message > img {
   vertical-align: middle;
-  margin-bottom: 2px;
+  margin-bottom: 1.5px;
 }
 .message-url {
   text-decoration: none;
